--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
-streamlit
-pandas
-openpyxl
-langchain
-qdrant-client
-langgraph
-openai
-python-dotenv
+QDRANT_API_KEY=your_qdrant_api_key
+QDRANT_URL=your_qdrant_url
+OPENAI_API_KEY=your_openai_api_key
