--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 QDRANT_API_KEY=your_qdrant_api_key
 QDRANT_URL=your_qdrant_url
 OPENAI_API_KEY=your_openai_api_key
+
+GEMINI_API_KEY=your_gemini_api_key
+GEMINI_ENDPOINT=your_gemini_endpoint_url
