--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-QDRANT_API_KEY=your_qdrant_api_key
-QDRANT_URL=your_qdrant_url
+QDRANT_API_KEY=b_Xma6997v0MFd2Go_GAXHv-mwGKJ2EKDIfKJB7RCzQHCwU6MwLA7w
+QDRANT_URL=https://943a6c3b-22ad-40aa-9a57-5bd164163a30.europe-west3-0.gcp.cloud.qdrant.io:6333
 GEMINI_API_KEY=your_gemini_api_key
 GEMINI_ENDPOINT=your_gemini_endpoint_url
 LOGGING_LEVEL=INFO
